# try-go-clean-template

./: .golangci.yml  README.md  README_CN.md
cmd/app/: BUILD.bazel  main.go
config/: BUILD.bazel
docs/: BUILD.bazel
integration-test/: BUILD.bazel  integration_test.go
internal/app/: BUILD.bazel  app.go
internal/controller/amqp_rpc/: BUILD.bazel  router.go  translation.go
internal/controller/http/: BUILD.bazel
internal/controller/http/middleware/: BUILD.bazel
internal/controller/http/v1/: BUILD.bazel  router.go  translation.go
internal/entity/: BUILD.bazel
internal/repo/: BUILD.bazel
internal/repo/persistent/: BUILD.bazel
internal/repo/webapi/: BUILD.bazel
internal/usecase/: BUILD.bazel  interfaces.go  mocks_test.go  translation.go  translation_test.go
internal/usecase/repo/: BUILD.bazel  translation_postgres.go
internal/usecase/translation/: BUILD.bazel
internal/usecase/webapi/: BUILD.bazel  translation_google.go
pkg/httpserver/: BUILD.bazel
pkg/logger/: BUILD.bazel
pkg/postgres/: BUILD.bazel
pkg/rabbitmq/rmq_rpc/: BUILD.bazel
pkg/rabbitmq/rmq_rpc/client/: BUILD.bazel  client.go
pkg/rabbitmq/rmq_rpc/server/: BUILD.bazel  server.go
