load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/Hyvi/go-present/try-go-clean-template/config",
    visibility = ["//visibility:public"],
    deps = ["@com_github_ilyakaznacheev_cleanenv//:go_default_library"],
)
