load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = ["app.go"],
    importpath = "github.com/evrone/go-clean-template/internal/app",
    visibility = ["//try-go-clean-template:__subpackages__"],
    deps = [
        "//try-go-clean-template/config",
        "//try-go-clean-template/internal/controller/amqp_rpc",
        "//try-go-clean-template/internal/controller/http",
        "//try-go-clean-template/internal/repo/persistent",
        "//try-go-clean-template/internal/repo/webapi",
        "//try-go-clean-template/internal/usecase/translation",
        "//try-go-clean-template/pkg/httpserver",
        "//try-go-clean-template/pkg/logger",
        "//try-go-clean-template/pkg/postgres",
        "//try-go-clean-template/pkg/rabbitmq/rmq_rpc/server",
    ],
)
