load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "usecase",
    srcs = ["contracts.go"],
    importpath = "github.com/evrone/go-clean-template/internal/usecase",
    visibility = ["//try-go-clean-template:__subpackages__"],
    deps = ["//try-go-clean-template/internal/entity"],
)

go_test(
    name = "usecase_test",
    srcs = [
        "mocks_repo_test.go",
        "mocks_usecase_test.go",
        "translation_test.go",
    ],
    deps = [
        "//try-go-clean-template/internal/entity",
        "//try-go-clean-template/internal/usecase/translation",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_mock//gomock",
    ],
)
