load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "postgres",
    srcs = [
        "options.go",
        "postgres.go",
    ],
    importpath = "github.com/Hyvi/go-present/try-go-clean-template/pkg/postgres",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jackc_pgx_v4//pgxpool:go_default_library",
        "@com_github_masterminds_squirrel//:go_default_library",
    ],
)
