load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "postgres",
    srcs = [
        "options.go",
        "postgres.go",
    ],
    importpath = "github.com/evrone/go-clean-template/pkg/postgres",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_github_masterminds_squirrel//:squirrel",
    ],
)
