load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "amqp_rpc",
    srcs = [
        "router.go",
        "translation.go",
    ],
    importpath = "github.com/evrone/go-clean-template/internal/controller/amqp_rpc",
    visibility = ["//try-go-clean-template:__subpackages__"],
    deps = [
        "//try-go-clean-template/internal/entity",
        "//try-go-clean-template/internal/usecase",
        "//try-go-clean-template/pkg/rabbitmq/rmq_rpc/server",
        "@com_github_rabbitmq_amqp091_go//:amqp091-go",
    ],
)
