load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repo",
    srcs = ["translation_postgres.go"],
    importpath = "github.com/Hyvi/go-present/try-go-clean-template/internal/usecase/repo",
    visibility = ["//try-go-clean-template:__subpackages__"],
    deps = [
        "//try-go-clean-template/internal/entity",
        "//try-go-clean-template/pkg/postgres",
    ],
)
