load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "translation",
    srcs = ["translation.go"],
    importpath = "github.com/evrone/go-clean-template/internal/usecase/translation",
    visibility = ["//try-go-clean-template:__subpackages__"],
    deps = [
        "//try-go-clean-template/internal/entity",
        "//try-go-clean-template/internal/repo",
    ],
)
