load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "rmq_rpc",
    srcs = [
        "connection.go",
        "errors.go",
    ],
    importpath = "github.com/Hyvi/go-present/try-go-clean-template/pkg/rabbitmq/rmq_rpc",
    visibility = ["//visibility:public"],
    deps = ["@com_github_streadway_amqp//:go_default_library"],
)
