load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = [
        "client.go",
        "options.go",
    ],
    importpath = "github.com/Hyvi/go-present/try-go-clean-template/pkg/rabbitmq/rmq_rpc/client",
    visibility = ["//visibility:public"],
    deps = [
        "//try-go-clean-template/pkg/rabbitmq/rmq_rpc",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_streadway_amqp//:go_default_library",
    ],
)
