load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = [
        "client.go",
        "options.go",
    ],
    importpath = "github.com/evrone/go-clean-template/pkg/rabbitmq/rmq_rpc/client",
    visibility = ["//visibility:public"],
    deps = [
        "//try-go-clean-template/pkg/rabbitmq/rmq_rpc",
        "@com_github_goccy_go_json//:go-json",
        "@com_github_google_uuid//:uuid",
        "@com_github_rabbitmq_amqp091_go//:amqp091-go",
    ],
)
