load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = [
        "options.go",
        "server.go",
    ],
    importpath = "github.com/Hyvi/go-present/try-go-clean-template/pkg/rabbitmq/rmq_rpc/server",
    visibility = ["//visibility:public"],
    deps = [
        "//try-go-clean-template/pkg/logger",
        "//try-go-clean-template/pkg/rabbitmq/rmq_rpc",
        "@com_github_streadway_amqp//:go_default_library",
    ],
)
